name:                monad-simulate
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/rybern/monad-simulate#readme
license:             BSD3
license-file:        LICENSE
author:              Ryan Bernstein
maintainer:          ryanbernstein1@gmail.com
copyright:           N/A
category:            N/A
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Control.Monad.Simulate
                     , Control.Eff.Simulate.Lazy
                     , Control.Eff.Simulate.Strict
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , extensible-effects
                     , ether >= 0.4.0.0
